<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Activity.Signup">

    <TextView
        android:id="@+id/header"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:fontFamily="@font/warpdrive"
        android:text="@string/driveway"
        android:textColor="#FFFFFF"
        android:textSize="37sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="159dp"
        android:layout_height="45dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="231dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="First Name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#FFF"
        android:textColorHint="#808080"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="159dp"
        android:layout_height="45dp"
        android:layout_marginStart="221dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#FFF"
        android:textColorHint="#808080"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#FFF"
        android:textColorHint="#808080"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/input_pass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#FFF"
        android:textColorHint="#808080"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password_confirm"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#FFF"
        android:textColorHint="#808080"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="379dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/PhoneNumber"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="#FFF"
        android:textColorHint="#808080"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_confirm" />


    <CheckBox
        android:id="@+id/check_host"
        android:layout_width="304dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:text="I am a Host"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="236dp"
        android:layout_height="46dp"
        android:background="@android:color/transparent"
        android:padding="7dp"
        android:text="@string/button_signUp"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="533dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_host"/>

    <Button
        android:id="@+id/loginQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:text="@string/login_question"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="32dp"
        android:layout_height="25dp"
        android:visibility="invisible"
        app:flow_verticalBias="0.13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginQuestion"
        app:layout_constraintVertical_bias="0.089" />


</androidx.constraintlayout.widget.ConstraintLayout>